--- a/css/default.css
+++ b/css/default.css
@@ -19,4 +19,12 @@
     -webkit-border-bottom-right-radius: inherit;
     border-bottom-right-radius: inherit;
   }
+  
+  .notification{
+    
+  }
+  .notif0{}
+  .notif1{}
+  .notif2 a{background-color: #F99 !important;}
+  #notif{margin:0px;}
 }
