--- a/css/default.css
+++ b/css/default.css
@@ -77,3 +77,10 @@
     font-style: italic;
     opacity: 0.5;
 }
+
+.hiddencheckbox.ui-flipswitch .ui-btn.ui-flipswitch-on {
+    text-indent: -3.4em;
+}
+.hiddencheckbox.ui-flipswitch .ui-flipswitch-off {
+    text-indent: 0.5em;
+}
